<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dirtyWhite">

    <EditText
        android:id="@+id/foodNameEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/food_name"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:inputType="text" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/price"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_marginTop="5dp"
        android:layout_gravity="end"/>
</LinearLayout>