<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/menuItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/menu_item_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:singleLine="true" />

    <TextView
        android:id="@+id/menuItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/menu_item_price"
        android:textSize="13sp"
        android:textColor="@android:color/black"
        android:ellipsize="end"
        android:singleLine="true" />

    <Button
        android:id="@+id/menuItemDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white" />
</LinearLayout>